--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
-    "name": "masudrana/wpdocker",
-    "description": "test",
+    "name": "masud-rana/wp-docker",
     "autoload": {
         "psr-4": {
-            "Masudrana\\Wpdocker\\": "includes/"
+            "MRWPDocker\\Inc\\": "./inc"
         }
     },
+    "authors": [
+        {
+            "name": "masudrana7",
+            "email": "44420570+masudrana7@users.noreply.github.com"
+        }
+    ],
     "require": {}
 }
